# data-science-projects

./: .gitignore  README.md  pyproject.toml
examples/: seaborn_heatmap.py
notebooks/: 01-make-a-multi-label-classification.ipynb  02-confusion-matrix-default-params.ipynb  03-repeated-k-fold-multi-output.ipynb
src/: table_generator.py
