[tool.poetry]
name = "data_science_project"
version = "0.1.0"
description = "Project intended to help in data science projects"
authors = ["tuliomitico <tuliofc2008@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,< 3.9"

[tool.poetry.dev-dependencies]
pytest = "~6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
